# url-parse

./: Cargo.toml  README.md
.github/workflows/: audit.yaml  cd.yaml  ci.yaml
src/: error.rs  lib.rs  url.rs  utils.rs
src/core/: anchor.rs  defaults.rs  domain.rs  global.rs  login.rs  mod.rs  path.rs  port.rs  query.rs  schema_separator.rs  scheme.rs  scheme_separator.rs
src/url/: anchor.rs  defaults.rs  domain.rs  global.rs  login.rs  mod.rs  path.rs  port.rs  query.rs  scheme.rs  url.rs
