[package]
name = "url-parse"
version = "1.0.4"
description = "🔗 A Rust library for parsing URLs."

categories = ["parser-implementations", "web-programming", "encoding"]
edition = "2021"
keywords = ["parser", "url"]
license = "MIT"
repository = "https://github.com/mihaigalos/url-parse"

[dependencies]
regex = "1.7.1"
