[package]
name = "url-parse"
version = "1.0.5"
description = "🔗 A Rust library for parsing URLs."

categories = ["parser-implementations", "web-programming", "encoding"]
edition = "2021"
keywords = ["parser", "url"]
license = "MIT"
repository = "https://github.com/mihaigalos/url-parse"

[dependencies]
regex = { version = "1.8.1", default-features = false, features = ["std"] }
